[package]
name = "ceprustico"
version = "0.1.0"
authors = ["Alex Eduardo Chiaranda <aechiara@gmail.com>"]
description = "Dado um CEP numérico e sem formatação, busca o endereço equivalente no site dos correios"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0.193", features = ["derive"] }
reqwest = { version = "0.11.23", features = ["blocking"] }
serde_json = "1.0.108"
